Improving Thread